fix scrollbarstyles

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,24 @@
   }
 }
 
+@layer base {
+  /* Firefox */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #ff0336;
+  }
+  /* Chrome, Edge and Safari */
+  *::-webkit-scrollbar {
+    @apply h-[10px] w-[10px];
+  }
+  *::-webkit-scrollbar-thumb {
+    @apply rounded-3xl bg-red hover:bg-gray-300;
+  }
+  *::-webkit-scrollbar-track {
+    @apply rounded-3xl bg-gray-100;
+  }
+}
+
 @layer utilities {
   .clip-path-hero {
     clip-path: polygon(0 0, 60% 0, 100% 100%, 30% 100%);
@@ -41,41 +59,4 @@
   .backface-hidden {
     backface-visibility: hidden;
   }
-}
-
-/* scrollbar */
-
-/* Firefox */
-* {
-  scrollbar-width: auto;
-  scrollbar-color: #a0a0a0 #ffffff;
-  scroll-behavior: smooth;
-}
-
-/* Chrome, Edge and Safari */
-*::-webkit-scrollbar {
-  width: auto;
-}
-
-*::-webkit-scrollbar-track {
-  border-radius: 100px;
-  background-color: #ffffff;
-}
-
-*::-webkit-scrollbar-thumb {
-  border-radius: 100px;
-  background-color: #ff0336;
-  border: 1.5px solid #fff;
-}
-
-*::-webkit-scrollbar-thumb:hover {
-  background-color: #a0a0a0;
-}
-
-*::-webkit-scrollbar-thumb:active {
-  background-color: #a0a0a0;
-}
-
-::selection {
-  background-color: rgba(161, 161, 161, 0.7);
 }
